<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Tim Cadogan-Cowper.
  ~
  ~ This file is part of Fabularium.
  ~
  ~ Fabularium is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Fabularium; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <!-- android:icon="@drawable/ic_favorite_black_48dp" -->
    <item
        android:id="@+id/projaction_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_refresh_db"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:title="@string/menu_sortBy"
        app:showAsAction="never" />

    <item
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/projaction_licenses"
        android:title="@string/menu_licenses"
        app:showAsAction="never" />

    <item
        android:id="@+id/projaction_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />

</menu>